maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:14: error: not found: value dir
  while (dir==0){
         ^